// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSearch component should render 1`] = `
<DocumentFragment>
  <form
    class="main-search"
    data-testid="main-search-form"
  >
    <input
      class="main-search__input"
      data-testid="main-search-input"
      type="text"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;

exports[`MainSearch component should render with namespaces selector 1`] = `
<DocumentFragment>
  <form
    class="main-search"
    data-testid="main-search-form"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        UniProtKB
      </button>
      <div
        class="dropdown-menu"
      />
    </div>
    <input
      class="main-search__input"
      data-testid="main-search-input"
      type="text"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;
